server.log

> military-logistics@1.0.0 start
> npm run start:backend


> military-logistics@1.0.0 start:backend
> cd backend && npm run start


> military-logistics-backend@1.0.0 start
> node dist/index.js

file:///Users/phamnam/workspace/military-logistics/backend/dist/controllers/bean-sprouts-calculation.controller.js:1
import type { Request, Response } from "express"
            ^

SyntaxError: Unexpected token '{'
    at compileSourceTextModule (node:internal/modules/esm/utils:338:16)
    at ModuleLoader.importSyncForRequire (node:internal/modules/esm/loader:353:18)
    at loadESMFromCJS (node:internal/modules/cjs/loader:1385:24)
    at Module._compile (node:internal/modules/cjs/loader:1536:5)
    at Object..js (node:internal/modules/cjs/loader:1706:10)
    at Module.load (node:internal/modules/cjs/loader:1289:32)
    at Function._load (node:internal/modules/cjs/loader:1108:12)
    at TracingChannel.traceSync (node:diagnostics_channel:322:14)
    at wrapModuleLoad (node:internal/modules/cjs/loader:220:24)
    at Module.require (node:internal/modules/cjs/loader:1311:12)

Node.js v22.14.0
